# libmediawiki

./: .kde-ci.yml  .reviewboardrc  AUTHORS  CMakeLists.txt  KF5MediaWikiConfig.cmake.in  Messages.sh  README  README.md  TODO  libmediawiki.lsm.cmake  libmediawiki.pc.cmake  metainfo.yaml
autotests/: CMakeLists.txt
cmake/modules/: FindMediawiki.cmake
cmake/templates/: libmediawiki.pc.cmake.in
doc/: Mainpage.dox
examples/editsample/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
examples/uploadsample/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
libmediawiki/: CMakeLists.txt  CTestConfig.cmake  Doxyfile  LibMediaWikiNightly.cmake  Mainpage.dox  edit.cpp  edit.h  generalinfo.cpp  generalinfo.h  image.cpp  image.h  imageinfo.cpp  imageinfo.h  job.cpp  job.h  job_p.h  login.cpp  login.h  logout.cpp  logout.h  mediawiki.cpp  mediawiki.h  mediawiki_export.h  mediawiki_p.h  page.cpp  page.h  parse.cpp  parse.h  protection.cpp  protection.h  queryimageinfo.cpp  queryimageinfo.h  queryimages.cpp  queryimages.h  queryinfo.cpp  queryinfo.h  queryrevision.cpp  queryrevision.h  querysiteinfogeneral.cpp  querysiteinfogeneral.h  (+10 more)
samplecode/: CMakeLists.txt
samplecode/editsample/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
samplecode/uploadsample/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/: CMakeLists.txt  Messages.sh  edit.cpp  edit.h  generalinfo.cpp  generalinfo.h  image.cpp  image.h  imageinfo.cpp  imageinfo.h  job.cpp  job.h  job_p.h  login.cpp  login.h  logout.cpp  logout.h  mediawiki.cpp  mediawiki.h  mediawiki_p.h  page.cpp  page.h  parse.cpp  parse.h  protection.cpp  protection.h  queryimageinfo.cpp  queryimageinfo.h  queryimages.cpp  queryimages.h  queryinfo.cpp  queryinfo.h  queryrevision.cpp  queryrevision.h  querysiteinfogeneral.cpp  querysiteinfogeneral.h  querysiteinfousergroups.cpp  querysiteinfousergroups.h  revision.cpp  revision.h  (+4 more)
tests/: CMakeLists.txt  edittest.cpp  logintest.cpp  logouttest.cpp  mediawikitest.cpp  parsetest.cpp  queryimageinfotest.cpp  queryimagestest.cpp  queryinfotest.cpp  queryrevisiontest.cpp  queryrevisiontest_parsetree.rc  querysiteinfogeneraltest.cpp  querysiteinfousergroupstest.cpp  uploadtest.cpp
tests/libmediawikitest/: fakeserver.cpp  fakeserver.h
