#
# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
#
# Redistribution and use is allowed according to the terms of the BSD license.
# For details see the accompanying COPYING-CMAKE-SCRIPTS file.

include_directories(${QT_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR}/../libmediawiki)
add_subdirectory(editsample)
add_subdirectory(uploadsample)
